--- a/pom.xml
+++ b/pom.xml
@@ -65,6 +65,14 @@
             <version>1.5.5.Final</version>
         </dependency>
 
+        <!-- Swagger UI Dependency -->
+        <dependency>
+            <groupId>org.springdoc</groupId>
+            <artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
+            <version>2.6.0</version>
+        </dependency>
+
+
         <!-- Test Dependency -->
         <dependency>
             <groupId>org.springframework.boot</groupId>
